Code cleanup and bug fixes
Fixed being able to swap tool parts to go into negative modifier slots

--- a/src/main/resources/assets/tconplanner/lang/en_us.json
+++ b/src/main/resources/assets/tconplanner/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "gui.tinkerstation.plannerbutton": "Open Planner",
+  "gui.tconplanner.plannerbutton": "Open Planner",
   "gui.tconplanner.name": "Tinker's Planner",
   "gui.tconplanner.notool": "Select Tool",
   "gui.tconplanner.banner.tools": "Tools",
