--- a/src/main/resources/assets/tconplanner/lang/ru_ru.json
+++ b/src/main/resources/assets/tconplanner/lang/ru_ru.json
@@ -17,5 +17,10 @@
   "gui.tconplanner.modifiers.usedslot": "Использует %1$s слот.",
   "gui.tconplanner.modifiers.usedslots": "Использует %1$s %2$s слотов.",
   "gui.tconplanner.modifiers.addlevel": "Добавить уровень",
-  "gui.tconplanner.modifiers.removelevel": "Убрать уровень"
+  "gui.tconplanner.modifiers.removelevel": "Убрать уровень",
+  "gui.tconplanner.editmodifierstack": "Modify \"Modifier Stack\"",
+  "gui.tconplanner.modifierstack.cancel": "Cancel",
+  "gui.tconplanner.modifierstack.save": "Save",
+  "gui.tconplanner.modifierstack.moveup": "Move Up",
+  "gui.tconplanner.modifierstack.movedown": "Move Down"
 }
