Added ability to import a tool ( #4 )

--- a/src/main/resources/assets/tconplanner/lang/en_us.json
+++ b/src/main/resources/assets/tconplanner/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "gui.tconplanner.plannerbutton": "Open Planner",
+  "gui.tconplanner.importtool": "Import Tool Parts to Planner",
   "gui.tconplanner.name": "Tinker's Planner",
   "gui.tconplanner.notool": "Select Tool",
   "gui.tconplanner.banner.tools": "Tools",
