Import button: added positioning configs and fixed button showing when it shouldn't

--- a/src/main/resources/assets/tconplanner/lang/en_us.json
+++ b/src/main/resources/assets/tconplanner/lang/en_us.json
@@ -9,11 +9,15 @@
   "gui.tconplanner.sort": "Sort: %1$s",
   "gui.tconplanner.bookmark.add": "Bookmark Item",
   "gui.tconplanner.bookmark.remove": "Remove Bookmark",
+  "gui.tconplanner.star.add": "Favorite Item",
+  "gui.tconplanner.star.remove": "Unfavorite Item",
   "gui.tconplanner.giveitem": "Give Item",
   "gui.tconplanner.randomize": "Randomize Materials",
   "gui.tconplanner.slots.available": "Available %1$s slots",
   "gui.tconplanner.modifiers.error.incrementnotmax": "The current level must be max before adding a new one",
   "gui.tconplanner.modifiers.error.minlevel": "Level can not go lower",
+  "gui.tconplanner.modifiers.addcreativeslot": "Left-click to add creative slot",
+  "gui.tconplanner.modifiers.removecreativeslot": "Right-click to remove creative slot",
   "gui.tconplanner.modifiers.exit": "Back",
   "gui.tconplanner.modifiers.usedslot": "Uses an %1$s slot",
   "gui.tconplanner.modifiers.usedslots": "Uses %1$s %2$s slots",
