Added more starring functionality

--- a/src/main/resources/assets/tconplanner/lang/en_us.json
+++ b/src/main/resources/assets/tconplanner/lang/en_us.json
@@ -9,8 +9,12 @@
   "gui.tconplanner.sort": "Sort: %1$s",
   "gui.tconplanner.bookmark.add": "Bookmark Item",
   "gui.tconplanner.bookmark.remove": "Remove Bookmark",
-  "gui.tconplanner.star.add": "Favorite Item",
-  "gui.tconplanner.star.remove": "Unfavorite Item",
+  "gui.tconplanner.star.add": "Star Item",
+  "gui.tconplanner.star.remove": "Un-star Item",
+  "gui.tconplanner.star.ext_remove": "Shift+Click to un-star item",
+  "gui.tconplanner.star.slot.missing": "Missing Tool Part:",
+  "gui.tconplanner.star.slot.incorrect": "Incorrect tool part! Should be:",
+  "gui.tconplanner.star.move": "Click to move parts to station",
   "gui.tconplanner.giveitem": "Give Item",
   "gui.tconplanner.randomize": "Randomize Materials",
   "gui.tconplanner.slots.available": "Available %1$s slots",
