--- a/src/main/resources/assets/tconplanner/lang/ru_ru.json
+++ b/src/main/resources/assets/tconplanner/lang/ru_ru.json
@@ -22,5 +22,15 @@
   "gui.tconplanner.modifierstack.cancel": "Cancel",
   "gui.tconplanner.modifierstack.save": "Save",
   "gui.tconplanner.modifierstack.moveup": "Move Up",
-  "gui.tconplanner.modifierstack.movedown": "Move Down"
+  "gui.tconplanner.modifierstack.movedown": "Move Down",
+  "gui.tconplanner.importtool": "Import Tool Parts to Planner",
+  "gui.tconplanner.star.add": "Star Item",
+  "gui.tconplanner.star.remove": "Un-star Item",
+  "gui.tconplanner.star.ext_remove": "Shift+Click to un-star item",
+  "gui.tconplanner.star.slot.missing": "Missing Tool Part:",
+  "gui.tconplanner.star.slot.incorrect": "Incorrect tool part! Should be:",
+  "gui.tconplanner.star.move": "Click to move parts to station",
+  "gui.tconplanner.modifiers.addcreativeslot": "Left-click to add creative slot",
+  "gui.tconplanner.modifiers.removecreativeslot": "Right-click to remove creative slot",
+  "gui.tconplanner.parts.modifier_descriptions": "Hold %1$s for modifiers"
 }
